# plogly

./: .gitignore  LICENSE  README.md  clickable_extensions.py  pyproject.toml  setup.py
examples/: create_a_borehole.py  dart_data_from_qgis.py  dart_data_from_qgis_norrevosborg.py  dart_with_geology.py
scripts/: plog_plotter.py  plot_plog.py
src/plog/: plog.py
src/plogly/: __init__.py  plog.py
tests/: test_functions.py
