[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plog"
version = "0.0.1"
authors = [
  { name="matt griffiths", email="mpg@geo.au.dk" },
]
description = "a light weight package for plotting logging data"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['numpy', 'matplotlib']


